--- a/app_todos.html
+++ b/app_todos.html
@@ -80,7 +80,7 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1 id="tutorial-knockback-todos-app">Tutorial: Knockback Todos App</h1>
+      <content class="page"><p>#Tutorial: Knockback Todos App</p>
 <p><a href="http://kmalakoff.github.com/knockback-todos-app/">Try the demo</a> or <a href="https://github.com/kmalakoff/knockback-todos-app">Look at the Code</a></p>
 <h2 id="todos-architecture">Todos Architecture</h2>
 <h3 id="knockback-follows-the-mvvm-pattern">Knockback follows the MVVM Pattern</h3>
