--- a/getting_started_views_view_models_models.html
+++ b/getting_started_views_view_models_models.html
@@ -67,7 +67,7 @@
       <header class="page">
       </header>
       <content class="page">
-        <section><h1 id="models-views-and-viewmodels-one-to-many-relationships">Models, Views, and ViewModels: One-To-Many Relationships</h1>
+        <section><p>#Models, Views, and ViewModels: One-To-Many Relationships</p>
 <p>The distinction between Models and ViewModels is important:</p>
 <p><em>Backbone.Models encapsulate the data and operations on the data, are serialized/deserialized from/to the server, and are in short Models.
 </em>ViewModels provide the attributes and logic to the templates often interacting with the Model data like Controllers. However, they may have their own data and logic that is purely View-related and that the server should never know about.</p>
