--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@ how Knockback provides internationalization to your applications.</p>
           </div>
           <div class="wrapped">
             <div class="row-fluid">
-              <div class="span4"><h2 id="projects">Projects</h2>
+              <div class="span4"><p>##Projects</p>
 <ul>
 <li><a href="http://www.vidigami.com/">Vidigami</a></li>
 <li><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!</li>
 </ul>
 
               </div>
-              <div class="span3"><h2 id="frameworks">Frameworks</h2>
+              <div class="span3"><p>##Frameworks</p>
 <ul>
 <li><a href="https://github.com/thedrow/django-knockback">django-knockback</a></li>
 <li><a href="http://pypi.python.org/pypi/js.knockback">js.knockback</a></li>
@@ -335,8 +335,8 @@ how Knockback provides internationalization to your applications.</p>
 </ul>
 
               </div>
-              <div class="span4"><h2 id="community-extensions">Community Extensions</h2>
-<p><a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!</p>
+              <div class="span4"><p>##Community Extensions
+<a href="https://github.com/kmalakoff/knockback-site/issues">Submit yours now</a>!</p>
 
               </div>
             </div>
