--- a/tutorials_introduction.html
+++ b/tutorials_introduction.html
@@ -63,9 +63,9 @@
       <header class="page">
       </header>
       <content class="page">
-        <section><h1 id="knockback-js-tutorials">Knockback.js Tutorials</h1>
+        <section><p>#Knockback.js Tutorials</p>
 <p>We have prepared some tutorials to help explain introduct Knockback.js concepts and to provide solutions to common problems.</p>
-<h2 id="tutorials">Tutorials</h2>
+<p>##Tutorials</p>
 <p>You can find the various &#39;Tutorials&#39; in the navigation bar above:</p>
 <ul>
 <li><a href="tutorial_kb_observable.html">kb.Observable</a>: shows how to create and customize an observable for a single Model attribute</li>
