--- a/getting_started_knockback_important_details.html
+++ b/getting_started_knockback_important_details.html
@@ -82,8 +82,8 @@
       </header>
       <content class="page">
         <section><h1 id="getting-started-with-knockback-js-knockback-js-important-details">Getting Started with Knockback.js: Knockback.js Important Details</h1>
-<h1 id="inheritance">Inheritance</h1>
-<p>Some Knockback classes are meant to be inherited from. Specifically:</p>
+<p>#Inheritance
+Some Knockback classes are meant to be inherited from. Specifically:</p>
 <ul>
 <li><a href="doc/class/kb/ViewModel.html">kb.ViewModel</a></li>
 <li><a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable</a></li>
@@ -106,9 +106,9 @@
               </ul>
               <div class="tab-content">
                 <div id="kb_view_model_inheritance_view" class="tab-pane active">
-                  <pre>&lt;div id='kb_view_model_inheritance'&gt;
-  &lt;p&gt;First name: &lt;input class='input-small pull-right' data-bind=&quot;value: first_name, valueUpdate: 'keyup'&quot; /&gt;&lt;/p&gt;
-  &lt;p&gt;Last name: &lt;input class='input-small pull-right' data-bind=&quot;value: last_name, valueUpdate: 'keyup'&quot; /&gt;&lt;/p&gt;
+                  <pre>&lt;div id=&#39;kb_view_model_inheritance&#39;&gt;
+  &lt;p&gt;First name: &lt;input class=&#39;input-small pull-right&#39; data-bind=&quot;value: first_name, valueUpdate: &#39;keyup&#39;&quot; /&gt;&lt;/p&gt;
+  &lt;p&gt;Last name: &lt;input class=&#39;input-small pull-right&#39; data-bind=&quot;value: last_name, valueUpdate: &#39;keyup&#39;&quot; /&gt;&lt;/p&gt;
   &lt;p&gt;Hello, &lt;span data-bind=&quot;text: full_name&quot;&gt; &lt;/span&gt;!&lt;/p&gt;
 &lt;/div&gt;</pre>
                 </div>
@@ -121,7 +121,7 @@ class MyViewModel extends kb.ViewModel
     @full_name = ko.computed((-&gt;return &quot;#{@first_name()} #{@last_name()}&quot;), @)
 view_model = new MyViewModel(model)
 
-ko.applyBindings(view_model, $('#kb_view_model_inheritance')[0])</pre>
+ko.applyBindings(view_model, $(&#39;#kb_view_model_inheritance&#39;)[0])</pre>
                   <pre data-for="js">var model = new Backbone.Model({first_name: &quot;Planet&quot;, last_name: &quot;Earth&quot;});
 
 var MyViewModel = kb.ViewModel.extend({
@@ -135,7 +135,7 @@ var MyViewModel = kb.ViewModel.extend({
 
 var view_model = new MyViewModel(model);
 
-ko.applyBindings(view_model, $('#kb_view_model_inheritance')[0]);
+ko.applyBindings(view_model, $(&#39;#kb_view_model_inheritance&#39;)[0]);
 </pre>
                 </div>
               </div>
@@ -150,25 +150,25 @@ ko.applyBindings(view_model, $('#kb_view_model_inheritance')[0]);
                 <script type="application/javascript" src="getting_started/knockback_important_details/kb_view_model_inheritance.js"></script>
               </div>
             </div>
-          </div><h1 id="specifying-mappings-paths-for-nested-models">Specifying Mappings Paths for Nested Models</h1>
+          </div><p>#Specifying Mappings Paths for Nested Models</p>
 <p>Because Backbone.Models can have attributes than contain nested Backbone.Models or Backbone.Collections, there are times where you need to specialize the ViewModel you want to use; for example, in a model/collection hierachy with relationships. When you do need to, you can use the <code>factories</code> option when creating a <a href="doc/class/kb/ViewModel.html">kb.ViewModel</a> or <a href="doc/class/kb/CollectionObservable.html">kb.CollectionObservable</a></p>
 
           <pre data-for="cs">view_model = {
   people: kb.collectionObservable(new Backbone.Collection([bob, fred]), {
     factories:
-      'models': PersonViewModel
-      'models.friends.models': FriendViewModel
+      &#39;models&#39;: PersonViewModel
+      &#39;models.friends.models&#39;: FriendViewModel
   })
 }</pre>
           <pre data-for="js">var view_model = {
   people: kb.collectionObservable(new Backbone.Collection([bob, fred]), {
     factories: {
-      'models': PersonViewModel,
-      'models.friends.models': FriendViewModel
+      &#39;models&#39;: PersonViewModel,
+      &#39;models.friends.models&#39;: FriendViewModel
     }
   })
 };</pre><p>Please take a look at the <a href="tutorial_nested_models.html">Nested Model Tutorial</a> for more details.</p>
-<h1 id="knockout-observables-foundations">Knockout Observables Foundations</h1>
+<p>#Knockout Observables Foundations</p>
 <p>Many Knockback.js classes return Knockout.js observables so their dependencies/subscriptions can and should be managed like any Knockout observable. This is **very important if you choose to extend Knockback classes.</p>
 <p>These classes return a ko.observable instead of &#39;this&#39;:</p>
 <ul>
@@ -200,7 +200,7 @@ ko.applyBindings(view_model, $('#kb_view_model_inheritance')[0]);
 <li><a href="doc/class/kb/ViewModel.html">kb.ViewModel</a></li>
 <li><a href="doc/class/kb/Statistics.html">kb.Statistics</a></li>
 </ul>
-<h1 id="backbone-model-signatures">Backbone.Model Signatures</h1>
+<p>#Backbone.Model Signatures</p>
 <p>Knockback.js does not require Backbone.Models or Backbone.ModelRefs for attribute watching, but requires only Backbone.Model-like signature.</p>
 <p>The minimal Backbone.Model signature is:</p>
 <ul>
