--- a/test/issues/issue145/issue.html
+++ b/test/issues/issue145/issue.html
@@ -1,37 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Knockback Issue 141 Test</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<body>
-
-  <div id="some-div">
-    <table>
-      <tbody data-bind="foreach: players">
-        <tr>
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Knockback Issue 141 Test</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
+    <div id="some-div">
+      <table>
+        <tbody data-bind="foreach: players">
+          <tr>
             <td data-bind="text: name"></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-  <script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
-  <script type="text/javascript" src="../../../node_modules/underscore/underscore.js"></script>
-  <script type="text/javascript" src="../../../node_modules/backbone/backbone.js"></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/jquery/dist/jquery.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/knockout/build/output/knockout-latest.debug.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/underscore/underscore.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/backbone/backbone.js"
+    ></script>
 
-  <!-- ECOSYSTEM -->
-  <script type="text/javascript" src="../../../node_modules/backbone.localstorage/backbone.localStorage.js"></script>
+    <!-- ECOSYSTEM -->
+    <script
+      type="text/javascript"
+      src="../../../node_modules/backbone.localstorage/backbone.localStorage.js"
+    ></script>
 
-  <!-- LIBRARY -->
-  <script type="text/javascript" src="../../../knockback.js"></script>
-  <script src="issue.js"></script>
-
-</body>
+    <!-- LIBRARY -->
+    <script type="text/javascript" src="../../../knockback.js"></script>
+    <script src="issue.js"></script>
+  </body>
 </html>
