--- a/test/issues/issue157/issue.html
+++ b/test/issues/issue157/issue.html
@@ -1,43 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Knockback Issue 157 Test</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<body>
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Knockback Issue 157 Test</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
+    <div id="some-div">
+      <button data-bind="click: addItem.bind($data)">add line</button>
+      <br /><br />
 
-  <div id="some-div">
-    <button data-bind="click: addItem.bind($data)">add line</button>
-    <br><br>
+      This collection is sortable: <br />
+      <ul data-bind="sortable: lines">
+        <li>
+          <span data-bind="html: name"></span>
+        </li>
+      </ul>
 
-    This collection is sortable: <br>
-    <ul data-bind="sortable: lines">
-      <li>
-        <span data-bind="html: name"></span>
-      </li>
-    </ul>
+      This is a clone which should stay the same: <br />
+      <ul data-bind="foreach: lines">
+        <li>
+          <span data-bind="html: name"></span>
+        </li>
+      </ul>
+    </div>
 
-    This is a clone which should stay the same: <br>
-    <ul data-bind="foreach: lines">
-      <li>
-        <span data-bind="html: name"></span>
-      </li>
-    </ul>
-  </div>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/jquery/dist/jquery.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/knockout/build/output/knockout-latest.debug.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/underscore/underscore.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../node_modules/backbone/backbone.js"
+    ></script>
 
-  <script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
-  <script type="text/javascript" src="../../../node_modules/underscore/underscore.js"></script>
-  <script type="text/javascript" src="../../../node_modules/backbone/backbone.js"></script>
-
-  <!-- LIBRARY -->
-  <script type="text/javascript" src="../../../knockback.js"></script>
-  <script src="issue.js"></script>
-
-</body>
+    <!-- LIBRARY -->
+    <script type="text/javascript" src="../../../knockback.js"></script>
+    <script src="issue.js"></script>
+  </body>
 </html>
