--- a/test/issues/issue40/require_problem.html
+++ b/test/issues/issue40/require_problem.html
@@ -1,19 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Knockback Issue 34 Test</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<body>
-
-  <script src="require-2.1.9.js"></script>
-  <script type="text/javascript">
-    /**
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Knockback Issue 34 Test</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
+    <script src="require-2.1.9.js"></script>
+    <script type="text/javascript">
+      /**
 
     F12 to open your console, you see the error.
     'require("module")' cannot be used out of the context of define
@@ -26,20 +27,19 @@
 
     */
 
-    require.config({
+      require.config({
         paths: {
-            'underscore': "../../../vendor/underscore-1.6.0",
-            'backbone': "../../../vendor/backbone-1.1.2",
-            'knockout': "../../../vendor/knockout-3.1.0",
-            'knockback': "../../../knockback"
-        }
-    });
+          underscore: "../../../vendor/underscore-1.6.0",
+          backbone: "../../../vendor/backbone-1.1.2",
+          knockout: "../../../vendor/knockout-3.1.0",
+          knockback: "../../../knockback",
+        },
+      });
 
-    require(['knockback'], function(kb) {
+      require(["knockback"], function (kb) {
         console.dir(kb);
-    });
-  </script>
-
-</body>
+      });
+    </script>
+  </body>
 </html>
 ​
