--- a/test/issues/issue98/issue.html
+++ b/test/issues/issue98/issue.html
@@ -1,30 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Knockback Issue 98 Test</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<body>
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+  <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Knockback Issue 98 Test</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
+    <div id="errorPanel"></div>
 
-<div id="errorPanel">
-</div>
+    <script src="../../../vendor/optional/jquery-2.1.1.js"></script>
+    <script
+      type="text/javascript"
+      src="../../../vendor/knockout-3.1.0.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../vendor/underscore-1.6.0.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../../../vendor/backbone-1.1.2.js"
+    ></script>
 
-  <script src="../../../vendor/optional/jquery-2.1.1.js"></script>
-  <script type="text/javascript" src="../../../vendor/knockout-3.1.0.js"></script>
-  <script type="text/javascript" src="../../../vendor/underscore-1.6.0.js"></script>
-  <script type="text/javascript" src="../../../vendor/backbone-1.1.2.js"></script>
+    <!-- ECOSYSTEM -->
+    <script
+      type="text/javascript"
+      src="../../../vendor/optional/backbone-relational-0.8.8.js"
+    ></script>
 
-  <!-- ECOSYSTEM -->
-  <script type="text/javascript" src="../../../vendor/optional/backbone-relational-0.8.8.js"></script>
-
-  <!-- LIBRARY -->
-  <script type="text/javascript" src="../../../knockback.js"></script>
-  <script src="issue.js"></script>
-
-</body>
+    <!-- LIBRARY -->
+    <script type="text/javascript" src="../../../knockback.js"></script>
+    <script src="issue.js"></script>
+  </body>
 </html>
